--- a/chinese/计算机网络-自顶向下课后答案.md
+++ b/chinese/计算机网络-自顶向下课后答案.md
@@ -1367,7 +1367,7 @@ P14、在仅NAK协议中，只有当接收到分组x1时，接收方才检测丢
 
 另一方面，如果数据经常被发送，那么以NAK为唯一方案的恢复可能会很快发生。此外，如果错误很少发生，那么Naks只是偶尔被发送(当需要时)，并且ACK永远不会被发送--NAK中的反馈大大减少--仅在ACK的情况下才发送。
 
-P15、发送数据包需要12微秒(或0.012毫秒)，作为1500*8/109=12微秒。为了使发送者在98%的时间里忙碌，我们必须使用util=0.98=(0.012n)/30.012或n大约2451个数据包。
+P15、发送数据包需要12微秒(或0.012毫秒)，作为 $1500 * 8/ 10^9 = 12$ 微秒。为了使发送者在98%的时间里忙碌，我们必须使用 util=0.98=(0.012n)/30.012或n大约2451个数据包。
 
 P16、是。这实际上会导致发送方向通道发送大量流水线数据。
 
