--- a/chinese/计算机网络-自顶向下课后答案.md
+++ b/chinese/计算机网络-自顶向下课后答案.md
@@ -1420,16 +1420,17 @@ P20、
 
 发送方FSM完全相同，如图3.15中的文本所示
 
-P21、由于A-to-B信道可能丢失请求消息,A将需要超时,并且重新发送其请求消息（能够从丢失中恢复）。因为信道延迟是可变的且unknown,可能A将发送重复的请求(即,重新发送已经被b)接收到的请求消息。为了能够检测重复请求消息，协议将使用序列号。1位序列数量将足以用于停止和等待类型的请求/响应协议。A（请求者）有4个状态：
+P21、由于A到B的通道可能会丢失请求消息，因此A需要超时并重新发送请求消息（以便从丢失中恢复）。由于通道延迟是可变且未知的，A可能会发送重复的请求（即重新发送已经被B接收的请求消息）。为了能够检测到重复的请求消息，协议将使用序列号。对于一种停止等待类型的请求/响应协议，使用一个1位的序列号就足够了。
 
-- “从上面等待请求0。”在这里，请求者正在等待一个呼叫以请求数据单元。当接收到上述请求时，它发送一个请求消息R0，到B，启动计时器，并向“等待”过渡D0”状态。当在“等待来自以上“状态”的请求0，A忽略从B收到的任何东西。
-- “等D0”在这里，请求者正在等待来自B的D0数据消息。定时器总是在这种状态下运行。如果计时器过期，A将发送另一条R0消息，重新启动定时器并保持此状态。如果从B接收到D0消息，A将停止时间并传输到“从上面等待请求1”状态。如果A在此状态下接收D1数据消息，则忽略它。
-- “等待上面的请求1。”在这里，请求者再次等待来自上面的呼叫来请求一个数据单元。当它从上面接收到一个请求时，它向B发送一个请求消息R1，启动一个定时器并转换到“等待D1”状态。当处于“等待上述请求1”状态时，A会忽略从B接收的任何内容。
-- “等待D1”。在这里，请求者正在等待来自B的d1数据消息。定时器总是在这种状态下运行。如果计时器过期，A将发送另一条R1消息，重新启动定时器并保持此状态。如果从B接收到D1消息，A将停止定时器并传输到“从上面等待请求0”状态。如果A在此状态下接收到D0数据消息，则忽略它。
+A（请求方）有4个状态：
+- **“等待来自上层的请求0”**：在此状态下，请求方等待来自上层的调用请求一个数据单元。当它接收到来自上层的请求时，发送请求消息R0到B，启动定时器，并转换到“等待D0”状态。在“等待来自上层的请求0”状态下，A会忽略从B接收到的任何消息。
+- **“等待D0”**：在此状态下，请求方等待来自B的D0数据消息。定时器始终在此状态下运行。如果定时器超时，A会重新发送R0消息，重新启动定时器，并保持在该状态。如果收到来自B的D0消息，A会停止定时器并转换到“等待来自上层的请求1”状态。如果A在此状态下收到D1数据消息，则会被忽略。
+- **“等待来自上层的请求1”**：在此状态下，请求方再次等待来自上层的调用请求一个数据单元。当它接收到来自上层的请求时，发送请求消息R1到B，启动定时器，并转换到“等待D1”状态。在“等待来自上层的请求1”状态下，A会忽略从B接收到的任何消息。
+- **“等待D1”**：在此状态下，请求方等待来自B的D1数据消息。定时器始终在此状态下运行。如果定时器超时，A会重新发送R1消息，重新启动定时器，并保持在该状态。如果收到来自B的D1消息，A会停止定时器并转换到“等待来自上层的请求0”状态。如果A在此状态下收到D0数据消息，则会被忽略。
 
-数据供应商(B)仅有两种状态:
-- 在此状态下的“发送D0。”，B继续响应收到的R0消息。发送D0，然后保持在该状态。如果B收到R1消息，则它知道其D0消息已正确接收。因此它丢弃该D0数据（由于它已在另一侧收到），然后过渡到“发送D1”状态，其中它将使用d1来发送下一个请求的数据块。
-- “发送D1”在这种状态下，B继续通过发送D1来响应接收到的R1消息，然后保持这种状态。如果B接收到R1消息，则它知道其D1消息已被正确接收，从而传输到“发送D1”状态。
+数据供应者（B）有两个状态：
+- **“发送D0”**：在此状态下，B继续响应接收到的R0消息并发送D0，然后保持在此状态。如果B收到R1消息，它知道自己的D0消息已经被正确接收。因此，它会丢弃这个D0数据（因为它已经在另一端被接收），然后转到“发送D1”状态，在那里它将使用D1发送下一个请求的数据单元。
+- **“发送D1”**：在此状态下，B继续响应接收到的R1消息并发送D1，然后保持在此状态。如果B收到R1消息，它知道自己的D1消息已经被正确接收，因此可以继续发送下一个请求的数据单元。
 
 P22、
 
