--- a/chinese/计算机网络-自顶向下课后答案.md
+++ b/chinese/计算机网络-自顶向下课后答案.md
@@ -1464,7 +1464,7 @@ P26、共有$2^{32}= 4294967296$个可能的序列。
 
 a)序列号不随每个段增加一个。相反，它会增加发送的数据字节数。因此，MSS的大小是无关的--从A到B发送的最大大小文件就是可以表示为$2^{32}≈4.19$GBytes的字节数。
 
-(B)分段数为$\left [ \frac{2^{32}}{536} \right ]=8012999$.66字节的标头添加到每个段中，总共生成528857934字节的标头。传输的字节总数为$2^{32}+528857934=4.824\times10^9$字节。因此，在155~Mbps链路上传输文件需要249秒。
+(B)分段数为 $\left [ \frac{2^{32}}{536} \right ]=8012999$ 66字节的标头添加到每个段中，总共生成528857934字节的标头。传输的字节总数为 $2^{32}+528857934=4.824\times10^9$ 字节。因此，在155~Mbps链路上传输文件需要249秒。
 
 P27、
 
